<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XPlayer</string>
    <string name="video_image_description">Video thumbnail</string>
    <string name="action_network_stream">Network stream</string>
    <string name="action_view">View</string>
    <string name="action_select">Select</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="stream_dialog_title">Network stream</string>
    <string name="stream_dialog_message">Please enter a network URL:\n  Example:http://www.example.com/video.mkv</string>
    <string name="denied_required_permission">Permission denied. You can change them in Settings &gt; Apps.</string>
    <string name="action_hw">HW</string>
    <string name="action_play">Play</string>
    <string name="action_display">Display</string>
    <string name="action_audio">Audio</string>
    <string name="action_subTitle">Subtitle</string>
    <string name="action_tools">Tools</string>
    <string name="action_music">Music</string>
    <string name="menu_update">Update</string>
    <string name="menu_search">Search</string>
</resources>