<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_hw"
        android:title="@string/action_hw"
        app:showAsAction="always"/>
    <item android:id="@+id/action_music"
        android:title="@string/action_music"
        android:icon="@drawable/ic_music_box_grey600_24dp"
        app:showAsAction="always"/>
    <item android:id="@+id/action_play"
        android:title="@string/action_play"
        app:showAsAction="never"/>
    <item android:id="@+id/action_display"
        android:title="@string/action_display"
        app:showAsAction="never"/>
    <item android:id="@+id/action_audio"
        android:title="@string/action_audio"
        app:showAsAction="never"/>
    <item android:id="@+id/action_subTitle"
        android:title="@string/action_subTitle"
        app:showAsAction="never"/>
    <item android:id="@+id/action_tools"
        android:title="@string/action_tools"
        app:showAsAction="never"/>
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never"/>
</menu>